src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__array_literal_expr.snap
---
source: src/internal/syntax/parser/tests.rs
expression: module
---
Module {
    body: [
        Expr(
            Literal(
                List(
                    [
                        Literal(
                            Int(
                                0,
                            ),
                        ),
                        Literal(
                            Int(
                                1,
                            ),
                        ),
                        Literal(
                            Int(
                                2,
                            ),
                        ),
                    ],
                ),
            ),
        ),
        Expr(
            Literal(
                List(
                    [
                        Literal(
                            Int(
                                0,
                            ),
                        ),
                        Literal(
                            Int(
                                1,
                            ),
                        ),
                        Literal(
                            Int(
                                2,
                            ),
                        ),
                    ],
                ),
            ),
        ),
        Expr(
            Literal(
                List(
                    [
                        Literal(
                            Int(
                                0,
                            ),
                        ),
                        Literal(
                            Int(
                                1,
                            ),
                        ),
                        Literal(
                            Int(
                                2,
                            ),
                        ),
                    ],
                ),
            ),
        ),
    ],
}
