src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__assign_expr-5.snap
---
source: src/internal/syntax/parser/tests.rs
expression: errors
---
invalid variable declaration
| [4;31ma.b :=[0m c


