src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__assign_expr-6.snap
---
source: src/internal/syntax/parser/tests.rs
expression: errors
---
invalid assignment target
| [4;31ma() =[0m b


