src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__bad_class_stmt_fields_after_methods.snap
---
source: src/internal/syntax/parser/tests.rs
expression: errors
---
fields may not appear after methods
| [4;31ma[0m = b


