src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__bad_class_stmt_indented_base.snap
---
source: src/internal/syntax/parser/tests.rs
expression: errors
---
invalid indentation
| [4;31m([0mU): pass


